Regression: Massive drops in Animation playback (fps) in the viewport (Depsgraph) #98157

Closed
opened 2022-05-16 08:29:16 +02:00 by Jeroen Bakker · 7 comments
Member
**System Information**
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-fedora-36-Rawhide 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44
version VSYNC fps solid fps material fps rendered
3.0.1 off 200 57 41
3.1.2 (regression caused by d09b1d2759) off 110 57 41

Short description of error
Massive drops in Animation playback dependency graph evaluation.

See note in the commit.

Right now the check is not optimal, because it results in more depsgraph
nodes than are necessary. This can be improved when it becomes cheaper
to check if a node tree contains any references to a video texture.
The node tree update refactor mentioned before makes it much easier
to construct this kind of run-time data from the bottom up, instead of
scanning the entire node tree recursively every time some information
is needed.
``` **System Information** Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-fedora-36-Rawhide 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 ``` | version | VSYNC | fps solid | fps material | fps rendered | | -- | -- | -- | -- | -- | | 3.0.1 | off | 200 | 57 | 41 | | 3.1.2 (regression caused by d09b1d2759) | off | 110 | 57 | 41 | **Short description of error** Massive drops in Animation playback dependency graph evaluation. See note in the commit. ``` Right now the check is not optimal, because it results in more depsgraph nodes than are necessary. This can be improved when it becomes cheaper to check if a node tree contains any references to a video texture. The node tree update refactor mentioned before makes it much easier to construct this kind of run-time data from the bottom up, instead of scanning the entire node tree recursively every time some information is needed. ```
Author
Member
Added subscribers: @Jeroen-Bakker, @JacquesLucke, @geocentric_wage, @PratikPB2123, @Raimund58, @LukasTonne, @deadpin, @fclem, @lichtwerk, @ditos
Author
Member

As this has been written as a limitation of the implementation we should discuss how important is it and if there are some quick wins to add in order to lower the priority.

As this has been written as a limitation of the implementation we should discuss how important is it and if there are some quick wins to add in order to lower the priority.
Jeroen Bakker changed title from Regression: Massive drops in Animation playback (fps) in the viewport (Workbench) to Regression: Massive drops in Animation playback (fps) in the viewport (Depsgraph) 2022-05-16 08:32:39 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

@Jeroen-Bakker please write the report such that it can be reproduced, or assign yourself so other people won't be digging around.

@Jeroen-Bakker please write the report such that it can be reproduced, or assign yourself so other people won't be digging around.

This issue was referenced by f517b3a295

This issue was referenced by f517b3a29568fd43b722973c7c46d3c358ba0dda
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-05-18 16:43:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98157
No description provided.